--- a/index.html
+++ b/index.html
@@ -1,38 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Work Day Scheduler</title>
-  </head>
 
-  <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
-    </header>
-    <div class="container">
-      <!-- Timeblocks go here -->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Work Day Scheduler</title>
+</head>
+
+<body>
+  <header class="jumbotron">
+    <h1 class="display-3">Work Day Scheduler</h1>
+    <p class="lead">A simple calendar app for scheduling your work day</p>
+    <p id="currentDay" class="lead"></p>
+  </header>
+  <div class="container">
+    <!-- Timeblocks go here -->
+    <div class="row">
+      <div class="col-md-1 col-sm-2 hour pt-4">9:00AM</div>
+      <input id="hour9" class="user-event-input col-md-10 col-sm-8 event-input-block">
+      <div class="col-md-1 col-sm-2 saveBtn" data-hour=9>
+        <i class ="far fa-save"></i>
+        </div>
+    </div>
+    <div class="row">
+      <div class="col-md-1 col-sm-2 hour pt-4 ">10:00AM</div>
+      <input id="hour10" class="user-event-input col-md-10 col-sm-8 event-input-block">
+      <div class="col-md-1 col-sm-2 saveBtn" data-hour=10>
+        <i class ="far fa-save"></i>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-1 col-sm-2 hour pt-4">11:00AM</div>
+      <input id="hour11" class="user-event-input col-md-10 col-sm-8 event-input-block">
+      <div class="col-md-1 col-sm-2 saveBtn" time-data=11>
+        <i class ="far fa-save"></i>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-1 col-sm-2 hour pt-4">12:00PM</div>
+      <input id="hour12" class="user-event-input col-md-10 col-sm-8 event-input-block">
+      <div class="col-md-1 col-sm-2 saveBtn" time-data=12>
+        <i class ="far fa-save"></i>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-1 col-sm-2 hour pt-4">1:00PM</div>
+      <input id="hour1" class="user-event-input col-md-10 col-sm-8 event-input-block">
+      <div class="col-md-1 col-sm-2 saveBtn" time-data=1>
+        <i class ="far fa-save"></i>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-1 col-sm-2 hour pt-4">2:00PM</div>
+      <input id="hour2" class="user-event-input col-md-10 col-sm-8 event-input-block">
+      <div class="col-md-1 col-sm-2 saveBtn" time-data=2>
+        <i class ="far fa-save"></i>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-1 col-sm-2 hour pt-4">3:00PM</div>
+      <input id="hour3" class="user-event-input col-md-10 col-sm-8 event-input-block">
+      <div class="col-md-1 col-sm-2 saveBtn" time-data=3>
+        <i class ="far fa-save"></i>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-1 col-sm-2 hour pt-4">4:00PM</div>
+      <input id="hour4" class="user-event-input col-md-10 col-sm-8 event-input-block">
+      <div class="col-md-1 col-sm-2 saveBtn" time-data=4>
+        <i class ="far fa-save"></i>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-1 col-sm-2 hour pt-4">5:00PM</div>
+      <input id="hour5" class="user-event-input col-md-10 col-sm-8 event-input-block">
+      <div class="col-md-1 col-sm-2 saveBtn" time-data=5>
+        <i class ="far fa-save"></i>
+      </div>
+    </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  </body>
+    <script src="script.js"></script>
+</body>
+
 </html>
