--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     <div class="row">
       <div class="col-md-1 col-sm-2 hour pt-4">9:00AM</div>
       <input id="hour9" class="user-event-input col-md-10 col-sm-8 event-input-block">
-      <div class="col-md-1 col-sm-2 saveBtn" data-hour=9>
+      <div class="col-md-1 col-sm-2 saveBtn" data-time=9>
         <i class ="far fa-save"></i>
         </div>
     </div>
     <div class="row">
       <div class="col-md-1 col-sm-2 hour pt-4 ">10:00AM</div>
       <input id="hour10" class="user-event-input col-md-10 col-sm-8 event-input-block">
-      <div class="col-md-1 col-sm-2 saveBtn" data-hour=10>
+      <div class="col-md-1 col-sm-2 saveBtn" data-time=10>
         <i class ="far fa-save"></i>
       </div>
     </div>
