--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="row">
       <div class="col-md-1 col-sm-2 hour pt-4">9:00AM</div>
       <input id="hour9" class="user-event-input col-md-10 col-sm-8 event-input-block">
-      <div class="col-md-1 col-sm-2 saveBtn" time-datals=9>
+      <div class="col-md-1 col-sm-2 saveBtn" time-data=9>
         <i class ="far fa-save"></i>
         </div>
     </div>
